@@ -19,6 +19,8 @@ Version 1.13.10+dev:
      performance ingame by up to 50 %.
  * Miscellaneous and bug fixes:
    * Fixed ingame help showing units you haven't encountered (bug #2135)
+   * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
+     (bug #2196)
 
 
 Version 1.13.10:
